# Foxel

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_zh.md  Dockerfile  Program.cs  README.md  README_zh.md  compose.yaml  entrypoint.sh  main.py  nginx.conf  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci-arm64.yml  docker-clean.yml  docker.yml  release-drafter.yml
Api/: AuthController.cs
Extensions/: ApiExtensions.cs  ApplicationConfigurationExtensions.cs  ApplicationServiceExtensions.cs  AuthenticationExtensions.cs  CoreServiceExtensions.cs  DatabaseExtensions.cs  HttpExtensions.cs  ServiceCollectionExtensions.cs
Models/: BatchDeleteResult.cs  PaginatedResult.cs
Services/Auth/: AuthService.cs  IAuthService.cs
Services/Management/: IUserManagementService.cs  StorageManagementService.cs
Utils/: AiHelper.cs  ImageHelper.cs
api/: response.py  routers.py
application/: task_queue.py  thumbnail.py
core/: version.py
db/: session.py
docs/: plugin-development.md
domain/: __init__.py
middleware/: exception_handler.py
models/: __init__.py  database.py
plugins/: build.sh  build.sh.md
schemas/: adapters.py  ai.py  email.py  fs.py  tasks.py
services/: ai.py  ai_providers.py  auth.py  config.py  email.py  offline_download.py  share.py  task_queue.py  tasks.py  vector_db.py  virtual_fs.py
setup/: README.md  foxel.sh  foxel_cli.py
web/: eslint.config.js  index.html  package-lock.json  package.json  plugin-frame.html  vite.config.ts
(+476 files in other folders)
